--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,46 +3,47 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="action_settings">Settings</string>
-    <string name="danhsachsv">DANH SÁCH SINH VIÊN</string>
-    <string name="themsv">THÊM SINH VIÊN</string>
-    <string name="themlop">THÊM LỚP</string>
-    <string name="update_student">CẬP NHẬT SINH VIÊN</string>
-    <string name="masv">Mã SV</string>
-    <string name="ma_sv">Mã SV:</string>
-    <string name="tensv">Tên SV</string>
-    <string name="ten_sv">Tên SV:</string>
-    <string name="ngaysinh">Ngày sinh</string>
-    <string name="gt">GT</string>
-    <string name="gioitinh">Giới tính:</string>
-    <string name="nam">Nam</string>
-    <string name="nu">Nữ</string>
-    <string name="ngay_sinh">Ngày sinh:</string>
-    <string name="xoa_trang">XÓA TRẮNG</string>
-    <string name="luu_sv">LƯU SINH VIÊN</string>
-    <string name="saved">Đã lưu</string>
-    <string name="error">Lỗi!</string>
-    <string name="updated">Đã cập nhật</string>
-    <string name="student_exists">Mã SV đã tồn tại</string>
-    <string name="delete">Xóa</string>
-    <string name="deleted">Đã xóa</string>
-    <string name="no">Không</string>
-    <string name="yes">Có</string>
-    <string name="delete_message">Xóa đối tượng</string>
+    <string name="danhsachsv">List Of Students</string>
+    <string name="themsv">Adding A Student</string>
+    <string name="themlop">Adding A Classroom</string>
+    <string name="update_student">Update Student\'s Information</string>
+    <string name="masv">Code</string>
+    <string name="ma_sv">Code:</string>
+    <string name="tensv">Name</string>
+    <string name="ten_sv">Name:</string>
+    <string name="ngaysinh">Birthday</string>
+    <string name="gt">Sex</string>
+    <string name="gioitinh">Sex:</string>
+    <string name="nam">Male</string>
+    <string name="nu">Female</string>
+    <string name="ngay_sinh">Birthday:</string>
+    <string name="xoa_trang">Clear</string>
+    <string name="luu_sv">Save</string>
+    <string name="saved">Saved!</string>
+    <string name="error">Error!</string>
+    <string name="updated">Updated!</string>
+    <string name="student_exists">This student already exists in the list</string>
+    <string name="delete">Delete</string>
+    <string name="deleted">Deleted!</string>
+    <string name="no">No</string>
+    <string name="yes">Yes</string>
+    <string name="delete_student_message">Delete this student?</string>
+    <string name="delete_classroom_message">Delete this classroom?</string>
     <string name="title_activity_main2">Main2Activity</string>
-    <string name="search">Tìm kiếm</string>
-    <string name="danhsachlop">DANH SÁCH LỚP</string>
-    <string name="malop">Mã lớp</string>
-    <string name="tenlop">Tên lớp</string>
-    <string name="giobatdau">Thời gian bắt đầu</string>
-    <string name="gioketthuc">Thời gian kết thúc</string>
-    <string name="thoigian">Thời gian</string>
-    <string name="phonghoc">Phòng học</string>
+    <string name="search">Search</string>
+    <string name="danhsachlop">List Of Classrooms</string>
+    <string name="malop">Code</string>
+    <string name="tenlop">Course\'s Name</string>
+    <string name="giobatdau">Starting Time</string>
+    <string name="gioketthuc">Ending Time</string>
+    <string name="thoigian">Timestream</string>
+    <string name="phonghoc">Classroom</string>
     <string name="tongsosv">Tồng SV</string>
-    <string name="luulop">LƯU LỚP HỌC</string>
-    <string name="update_class">CẬP NHẬT LỚP HỌC</string>
-    <string name="class_exits">Mã lớp học đã tồn tại</string>
-    <string name="soluong">SL: </string>
-
+    <string name="luulop">Save</string>
+    <string name="update_class">Updating The Classroom</string>
+    <string name="class_exits">Classroom\'s code already exists!</string>
+    <string name="soluong">Total: </string>
+    <string name="order_num">Order </string>
     <string name="menu_home">Home</string>
     <string name="home_second">Home Second</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -58,7 +59,7 @@
     <string name="thongbaonghi">Thông báo nghỉ học</string>
     <string name="nhantinchohs">Nhắn tin</string>
     <string name="emailToStudent">Gửi mail cho cả lớp</string>
-    <string name="sodienthoai">Số điện thoại:</string>
+    <string name="sodienthoai">Phone Number:</string>
     <string name="email">Email:</string>
     <string name="telephony_not_enabled">Điện thoại không khả dụng</string>
     <string name="failure_permission">Truy cập bị từ chối</string>
