--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="danhsachsv">List Of Students</string>
     <string name="themsv">Adding A Student</string>
     <string name="themlop">Adding A Classroom</string>
-    <string name="update_student">Update Student\'s Information</string>
+    <string name="update_student">Updating Student\'s Information</string>
     <string name="masv">Code</string>
     <string name="ma_sv">Code:</string>
     <string name="tensv">Name</string>
